src/objects/Case.object
<CustomObject>
    <businessProcesses>
        <fullName>Magazine Luiza</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Cancelado</fullName>
        </values>
        <values>
            <fullName>Em fila</fullName>
        </values>
        <values>
            <fullName>Em tratativa</fullName>
        </values>
        <values>
            <fullName>Fechado</fullName>
        </values>
        <values>
            <fullName>Novo</fullName>
            <default>true</default>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>MktPlace - Cancelamento de pedido</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Aguardando resposta do Cliente</fullName>
        </values>
        <values>
            <fullName>Aguardando resposta do Lojista</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>Aguardando resposta do Magazine Luiza</fullName>
        </values>
        <values>
            <fullName>Devolução autorizada - aguardando envio</fullName>
        </values>
        <values>
            <fullName>Devolução negada</fullName>
        </values>
        <values>
            <fullName>Estorno autorizado</fullName>
        </values>
        <values>
            <fullName>Estorno recusado</fullName>
        </values>
        <values>
            <fullName>Fechado Automático</fullName>
        </values>
        <values>
            <fullName>Fechado Cliente</fullName>
        </values>
        <values>
            <fullName>Lojista recebeu o produto - aguar%2E análi</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>MktPlace Dúvidas de Produtos %2F Posição de entrega</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Aguardando resposta do Cliente</fullName>
        </values>
        <values>
            <fullName>Aguardando resposta do Lojista</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>Aguardando resposta do Magazine Luiza</fullName>
        </values>
        <values>
            <fullName>Fechado Automático</fullName>
        </values>
        <values>
            <fullName>Fechado Cliente</fullName>
        </values>
    </businessProcesses>
    <fields>
        <fullName>AddressDeliveryNewSale__c</fullName>
        <label>Endereço para entrega da nova venda</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Agency__c</fullName>
        <label>Agência</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AreaCausingException__c</fullName>
        <label>Área causadora da exceção</label>
        <picklist>
            <picklistValues>
                <fullName>Atendimento</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cliente</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Controle de Estoque</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fornecedor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Processamento</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reversa</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Televendas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Transportes (PREENCHER O &quot;Bloco 3&quot; - Transportes)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Transportes (PREENCHER &quot;Bloco 2&quot;)</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>AttachFile__c</fullName>
        <label>Anexar Arquivo (comprovante)?</label>
        <picklist>
            <picklistValues>
                <fullName>Sim</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Não</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>AuthorizationProtocolDelivery__c</fullName>
        <label>1.Nº protoc autoriza Posição de entregas</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BugFeatureAD__c</fullName>
        <label>Característica do erro de anúncio</label>
        <picklist>
            <picklistValues>
                <fullName>A cor é diferente do site</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Produto não é igual a imagem do site</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A descrição do produto no site é diferente (características/configurações)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>As dimensões do produto no site são diferentes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cliente alega ter comprado na data da promoção e não ter pago valor promocional</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Erro nas características e funcionalidades</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Erro na cor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Erro na imagem</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Erro na ficha técnica</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>O item enviado não corresponde ao comprado</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>C_digo_de_Postagem__c</fullName>
        <label>Código de Postagem</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CancelReason__c</fullName>
        <label>Motivo do Cancelamento?</label>
        <picklist>
            <picklistValues>
                <fullName>Defeito no produto</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Embalagem danificada</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Erro operacional CD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Extravio | Avaria</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Insatisfação com o produto</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Produto devolvido</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CarrierCase__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Transportadora</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.Type</field>
                <operation>equals</operation>
                <value>Transportadora</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Casos (Transportadora)</relationshipLabel>
        <relationshipName>Casos2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Carrier__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>4.Transportadora</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.Type</field>
                <operation>equals</operation>
                <value>Transportadora</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Casos</relationshipLabel>
        <relationshipName>Casos</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ChangeAddress__c</fullName>
        <label>Alterar endereço</label>
        <picklist>
            <picklistValues>
                <fullName>Entrega</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Novo pedido / Troca</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ChangeReason__c</fullName>
        <label>Motivo da troca?</label>
        <picklist>
            <picklistValues>
                <fullName>Defeito no produto</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Embalagem danificada</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Erro operacional CD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Extravio | Avaria</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Insatisfação com o produto</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Produto devolvido</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Channel__c</fullName>
        <label>Canal?</label>
        <picklist>
            <picklistValues>
                <fullName>Boletim</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Site</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Cidade</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>City__c.UF__c</field>
                <operation>equals</operation>
                <valueField>$Source.Estado__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>City__c</referenceTo>
        <relationshipLabel>Casos</relationshipLabel>
        <relationshipName>Casos</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CodigoIdentificador__c</fullName>
        <label>Código Interno Salesforce</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CollectDate__c</fullName>
        <label>Data Coleta</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CollectionAddress__c</fullName>
        <label>Endereço de coleta</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CollectionCarrier__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Transportadora da coleta</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Casos (Transportadora da coleta)</relationshipLabel>
        <relationshipName>Casos1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CollectionProtocolNumberLateReturns__c</fullName>
        <label>2.Nº protoc Coleta-Devolução atrasada</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CollectionProtocolNumberReestablishment__c</fullName>
        <label>3.Nº protoc de Coleta-Recontato</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Coment_rio_Privado_do_Lojista__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Comentário Privado do Lojista</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ConfirmationDeleveryAddress__c</fullName>
        <label>Confirmação do endereço de entrega</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ContactSeller__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contato do Lojista</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Casos (Contato do Lojista)</relationshipLabel>
        <relationshipName>ContatoSeller</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ContactType__c</fullName>
        <label>Tipo recontato</label>
        <picklist>
            <picklistValues>
                <fullName>1o recontato</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2o recontato</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CopyCarrierAuthorizationEmail__c</fullName>
        <label>Email de autorização da Transportadora</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CorrectItemCode__c</fullName>
        <label>1. Código do item correto</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CustomerEmail__c</fullName>
        <label>E-mail do cliente</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CustomerNoteInvoice__c</fullName>
        <label>Cliente fez anotação na Nota Fiscal?</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CustomerPrefer__c</fullName>
        <label>Inserir preferência do cliente</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CustomerWinsBrandModel__c</fullName>
        <label>Cliente possui alguma preferência ?</label>
        <picklist>
            <picklistValues>
                <fullName>Sim</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Não</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>DataFlow__c</fullName>
        <formula>if( SLA_8_1_Fase__c ==true,
IMAGE( 
&quot;/resource/1428625956000/DataFlow&quot;, 
&quot;Possui Fluxo&quot;, 
18, 
18 
),&apos;&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Fluxo</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DateInvoice__c</fullName>
        <label>Data da emissão da NF</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DatePayment__c</fullName>
        <label>Data do pagamento do boleto</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DatePurchase__c</fullName>
        <label>Data da compra</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DateRequestDelevery__c</fullName>
        <label>Data do agendamento do pedido</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DifferenceChargedCustomerSimilar1__c</fullName>
        <label>4. Diferença a ser cobrada no similar 1</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>DifferenceChargedCustomerSimilar2__c</fullName>
        <label>6. Diferença a ser cobrada no similar 2</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>DifferenceChargedCustomerSimilar3__c</fullName>
        <label>8. Diferença a ser cobrada no similar 3</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>DigitAccountBank__c</fullName>
        <label>Dígito da conta corrente</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>E_Mail_Enviado__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Email Respondido</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>E_Mail_Recebido__c</fullName>
        <defaultValue>false</defaultValue>
        <label>E-Mail Recebido</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>E_mail_nao_lido__c</fullName>
        <defaultValue>false</defaultValue>
        <label>E-mail não lido</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EmailRecebido__c</fullName>
        <defaultValue>false</defaultValue>
        <label>EmailRecebido</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Estado__c</fullName>
        <label>Estado</label>
        <picklist>
            <picklistValues>
                <fullName>AC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DF</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ES</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MG</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PB</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RJ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TO</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Gifted__c</fullName>
        <label>Presenteado</label>
        <picklist>
            <picklistValues>
                <fullName>Sim</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Não</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>IMEINumber__c</fullName>
        <label>Número do IMEI</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ImeiBarcode__c</fullName>
        <label>Código de barras, IMEI ou Nº de série</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>InformDateReceipt__c</fullName>
        <label>2. Informar data de recebimento</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>InvoiceText__c</fullName>
        <label>Nota Fiscal</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Invoice__c</fullName>
        <formula>Order_Gemco__r.Invoice__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Nota fiscal</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Level_1__c</fullName>
        <label>Classificação</label>
        <picklist>
            <picklistValues>
                <fullName>Análise do Produto</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cadastro e seu espaço</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cancelamento</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Coleta e devolução</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Entrega com nota fiscal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Garantia estendida</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nota Fiscal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Troca</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Entrega sem nota fiscal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Casos abertos pelo CD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>E-mail</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ligação</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Level_2__c</fullName>
        <label>Motivo do Contato</label>
        <picklist>
            <controllingField>Level_1__c</controllingField>
            <picklistValues>
                <fullName>Análise do Produto - Faltando acessórios</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Produto diferente do que constava no site</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Produto com preço | Forma de pagamento diferente do ato da compra</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Erro em promoção anunciada</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Problemas com o cadastro no site</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Informação de produto</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Informação de Cadastro</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Informação de cancelamento - procedimento e prazos</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Informação sobre a coleta / devolução</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Recontato com protocolo aberto ou dentro do prazo de coleta</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Informação de entrega procecimento e prazos</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Recontato com protocolo aberto ou dentro do prazo de entrega</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Informação de entrega procedimento e prazos</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Informação de garantia estendida</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Informações sobre notas fiscais / DANFE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Informação de troca - procedimento e prazos</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Solicitar similiar para troca</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Atraso - Pedido liberado faturamento - Não tem produto disponível</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Atraso - Pedido não liberado faturamento</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Atraso - Pedido liberado faturamento - Tem produto disponível</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Há item do pedido que não foi processado</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Boleto com código inválido</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pagamento do pedido não foi confirmado</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Abertura de cancelamento ADM ou ML Admin</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dados para restituição de cancelamento ML Admin</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reclamação de atraso na restituição ou estorno</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Solicitação de cancelamento em exceção</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Solicitar alteração no status restituição ou estorno</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Solicitar cancelamento de pedido liberado para faturamento</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Alterar endereço de coleta</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>LuizaCard__c</fullName>
        <label>Cartão Luiza</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LuizaCode_Lojista__c</fullName>
        <formula>Seller__r.LuizaCode__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>LuizaCode Lojista</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LuizaCode__c</fullName>
        <externalId>true</externalId>
        <label>LuizaCode</label>
        <length>150</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>MagazineDateMediation__c</fullName>
        <label>Data Mediação Magazine Luiza</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>MagazineMediation__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Mediação Magazine Luiza?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MktPlaceAcaoMagazine__c</fullName>
        <formula>IF( 
(ISPICKVAL( MktPlaceBandeirinha__c ,&quot;Lojista&quot;))
,IMAGE(&quot;https://c.cs62.content.force.com/servlet/servlet.FileDownload?file=0155C0000000Zom&quot;,&quot;Lojista&quot;,25,25),
IF((ISPICKVAL(MktPlaceBandeirinha__c,&quot;Cliente&quot;))
,IMAGE(&quot;https://c.cs62.content.force.com/servlet/servlet.FileDownload?file=0155C0000000Zor&quot;,&quot;Cliente&quot;,25,25),null))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Ação Magazine?</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MktPlaceBandeirinha__c</fullName>
        <label>Bandeirinha</label>
        <picklist>
            <picklistValues>
                <fullName>Vazio</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lojista</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cliente</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>MktPlaceEmailDaContaCustomer__c</fullName>
        <description>Campo foi gerado para ser utilizado nos casos de Mkt-Place, para receber o email que existe na conta do Customer Pessoa Jurídica.</description>
        <label>Email da conta - Cliente</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>MktPlaceJaEnviouNotificacaoEstorno__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Campo flag para verificar se o email do estorno autorizado já foi enviado alguma vez.</description>
        <label>Já Enviou Notificação Estorno?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MktPlace_FlagMediacaoMagazine__c</fullName>
        <description>Flag - Necessita Status Magazine - Sim ou Não</description>
        <formula>IF(( MagazineMediation__c  =True), IMAGE ( &quot;https://c.cs62.content.force.com/servlet/servlet.FileDownload?file=0155C0000000Zow&quot;,&quot;Botão vermelho&quot;,25,25),null)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Bandeira vermelha: Necessita de mediação.
Bandeira verde: Não necessita de mediação.</inlineHelpText>
        <label>Botão vermelho:</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Modelo__c</fullName>
        <description>Campo para descrição do modelo referente ao produto não encontrado (indisponível ou não contemplado).</description>
        <label>Modelo não encontrado</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NFInputCollect__c</fullName>
        <label>NF Entrada/ Coleta</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NameCustomer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Nome do outro cliente</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Casos</relationshipLabel>
        <relationshipName>Casos</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>NeedCustomerResponse__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Necessita resposta cliente</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>NeedSellerResponse__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Necessita resposta vendedor</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>NewEmailAlteration__c</fullName>
        <label>Novo e-mail para alteração</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NumberAccountBank__c</fullName>
        <label>Número da conta corrente sem o dígito</label>
        <length>14</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NumberBanck__c</fullName>
        <label>Nome do Banco</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NumberNFCollect__c</fullName>
        <label>Número NF Coleta</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NumberNFOrigin__c</fullName>
        <label>Número NF Origem</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NumberOC__c</fullName>
        <label>Número da OC ou ML Admin</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NumberOccurrence__c</fullName>
        <label>Número da Ocorrência</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NumberOrderGemcoCustomer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Número do pedido Gemco do outro cliente</label>
        <referenceTo>Order_Gemco__c</referenceTo>
        <relationshipLabel>Casos (Número do pedido Gemco do outro cliente)</relationshipLabel>
        <relationshipName>Casos1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>NumberPreviousProtocol__c</fullName>
        <inlineHelpText>Número do protocolo anterior [1º contato ou 1º recontato]</inlineHelpText>
        <label>Nº Protocolo 1º contato ou 1º recontato</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NumberProtocolFirstContact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Número do Protocolo - Primeiro contato</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Casos</relationshipLabel>
        <relationshipName>Casos</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ObjectNumber__c</fullName>
        <label>Número do Objeto</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OferecerSimilar_1__c</fullName>
        <label>3. Oferecer similar 1</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OferecerSimilar_2__c</fullName>
        <label>5. Oferecer similar 2</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OferecerSimilar_3__c</fullName>
        <label>7. Oferecer similar 3</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OfferSimilar1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>3. Oferecer similar 1</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Casos</relationshipLabel>
        <relationshipName>Casos</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>